Clean up modular CLI address book