@@ -5,28 +5,36 @@ import addressbook.manager.AddressBookManager;
 import addressbook.model.Contact;
 
 import java.util.List;
-import java.util.Scanner;
-import java.util.stream.Collectors;
 
 /**
- * Allows the user to search contacts by name, phone, email, or address content.
+ * Searches contacts by name, phone number, email address, or address content.
  */
-public class ContactSearcher {
+public final class ContactSearcher {
 
-    private static final Scanner scanner = new Scanner(System.in);
+    /**
+     * Prevents instantiation because this class provides only static utility methods.
+     */
+    private ContactSearcher() {
+    }
 
+    /**
+     * Prompts for a search term, displays matching contacts, and optionally
+     * displays the full details of a selected match.
+     *
+     * @param manager manager containing the contacts to search
+     */
     public static void searchAndSelect(AddressBookManager manager) {
-        System.out.print("Search by name, phone, email, or address: ");
-        String query = scanner.nextLine().trim().toLowerCase();
+        System.out.print("Search by name, phone, email, or address (or \"exit\" to leave): ");
+        String query = PromptUtils.readOperationLine().trim();
+
+        if (query.isBlank()) {
+            System.out.println("Search cannot be blank.");
+            return;
+        }
 
         List<Contact> matches = manager.getContacts().stream()
-                .filter(c ->
-                        c.getFullName().toLowerCase().contains(query) ||
-                                c.getPhoneNumbers().stream().anyMatch(p -> p.getNumber().toLowerCase().contains(query)) ||
-                                c.getEmailAddresses().stream().anyMatch(e -> e.getEmail().toLowerCase().contains(query)) ||
-                                c.getAddresses().stream().anyMatch(a -> a.toString().toLowerCase().contains(query))
-                )
-                .collect(Collectors.toList());
+                .filter(contact -> contact.matches(query))
+                .toList();
 
         if (matches.isEmpty()) {
             System.out.println("No matches found.");
@@ -34,25 +42,26 @@ public class ContactSearcher {
         }
 
         System.out.println("\n--- Matching Contacts ---");
+
         for (int i = 0; i < matches.size(); i++) {
-            System.out.printf("%d. %s\n", i + 1, matches.get(i).getFullName());
+            System.out.printf("%d. %s%n", i + 1, matches.get(i).getFullName());
         }
 
-        System.out.print("Enter number to view full contact or press Enter to skip: ");
-        String input = scanner.nextLine().trim();
-        if (!input.isBlank()) {
-            try {
-                int index = Integer.parseInt(input) - 1;
-                if (index >= 0 && index < matches.size()) {
-                    System.out.println("\n" + ContactDisplayFormatter.formatContact(matches.get(index)));
-                    System.out.println("---------------");
-                }
-                else {
-                    System.out.println("Invalid selection.");
-                }
-            } catch (NumberFormatException e) {
-                System.out.println("Invalid input.");
-            }
+        System.out.print("Enter number to view full contact, press Enter to skip, or \"exit\" to leave: ");
+        String input = PromptUtils.readOperationLine().trim();
+
+        if (input.isBlank()) {
+            return;
         }
+
+        int index = PromptUtils.parseSelection(input, matches.size());
+
+        if (index == -1) {
+            System.out.println("Invalid selection.");
+            return;
+        }
+
+        System.out.println("\n" + ContactDisplayFormatter.formatContact(matches.get(index)));
+        System.out.println("---------------");
     }
 }
